September 2006: Delays in libgda support.
	See backend/README for more information. The stable
	release of libgda is unable to fully support a QOF backend
	module and after the backporting and delays suffered
	within pilot-qof, I am unwilling to go chasing an unstable
	or CVS release. libgda support is therefore delayed.

September 2006: Extensible error handling.
	The backend errors have been extended into an extensible
	error handler that is available either through the
	backend or through the session (for applications). QofError
	is designed for user-friendly messages and supports setting
	errors and error messages on-the-fly to provide user error
	messages that are as detailed, relevant and helpful as possible.
	Programming output should still be logged with QofLog.

August 2006: The SQLite backend for embedded systems 
	is now working.
	The gnc-numeric to QofNumeric transition is 
	complete.
	Other bugfixes in 0.7.1 :
	QofDate and QofTime fixes to avoid using GDate except in explicit
		conversions (prevents build failures on hppa and sparc).
	Fix the QSF valgrind patch to avoid seg fault on writing QSF.
	Both these patches are already in the Debian package, 0.7.0-2.

July 2006: Implemented QofTime and QofDate throughout
	the rest of the library. Enabled configure option
	to build without deprecated code in preparation
	for libqof1 on embedded systems and for libqof2
	more generally: --disable-deprecated-qof

June 2006: Replaced gnc-date with QofTime and a new
	QofDate, splitting time handling (seconds) from
	date handling (calendar). Full 64bit support
	for all times and dates within a couple dozen
	times the age of the universe. Handlers to convert
	to limited types like struct tm, time_t and GDate
	when within range.

May 2006: Support for undo operations with each QofBook
	added. Beginning overhaul of gnc-date to QofTime.
	Add support from coreutils in Debian to support
	nanosecond time formats.
	Add automated build of Doxygen documentation to