@@ -1,3 +1,5 @@
+September 2006: KVP_TYPE_BOOLEAN support.
+
 September 2006: Delays in libgda support.
 	See backend/README for more information. The stable
 	release of libgda is unable to fully support a QOF backend
